Fix blog article image overflow

--- a/assets/style/blog-article.less
+++ b/assets/style/blog-article.less
@@ -48,6 +48,7 @@
     }
     p img{
       display: table-cell;
+      max-width: 100%;
       margin: auto;
     }
     .hljs{
